[package]
name = "dispath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
either = "1.8.1"
itertools = "0.10.5"
regex = "1.8.4"

[profile.release]
opt-level = "z"
strip = true
lto = true
